create request for get board and add auto migrations for data in DB
